--- a/Server/app/templates/index.html
+++ b/Server/app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Google Ngram - Plasare de evenimente</title>
+        <title>Holiday Planner</title>
 
         <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap-theme.min.css">
@@ -16,21 +16,13 @@
         <div class="header">
 
         </div>
-        <div class="acs_logo"></div>
-        <div class="upb_logo"></div>
-        <div class="project_title1">Proiect de diplomă</div>
-        <div class="project_title">Google Ngrams - Plasare de evenimente</div>
+        
         <div>
 
             <div data-ng-view="" id="page-content" autoscroll> </div>
 
-        </div><!-- /.container -->
+        </div>
 
-        <!-- <div class="footer">
-            <div class="footer-autor">Autor: Sînziana Nicolae</div>
-            <div class="footer-sesiune">Proiect de diplomă – Iulie 2015</div>
-            <div class="footer-coord">Conducător științific: S.L. Dr. Ing. Costin-Gabriel Chiru<div/>
-        </div> -->
         <script type="text/javascript" src="./Core/JQuery/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="./Core/JQuery/jquery-migrate-1.2.1.min.js"></script>
         <script type="text/javascript" src="./Core/JQuery-UI/jquery-ui.min.js"></script>
@@ -42,26 +34,10 @@
         <script type="text/javascript" src="./Core/AngularJS/angular-animate.min.js"></script>
         <script type="text/javascript" src="./Core/Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="./Core/Bootstrap/ui-bootstrap-tpls-0.13.0.min.js"></script>
-        <script type="text/javascript" src="./Core/Class/class.js"></script>
-        <script type="text/javascript" src="./Core/Class/namespace.js"></script>
-        <script type="text/javascript" src="./Core/Logger/logger.js"></script>
         <script type="text/javascript" src="./Core/Moment/moment.min.js"></script>
         <script type="text/javascript" src="./Core/Underscore/underscore-min.js"></script>
-        <script type="text/javascript" src="./Core/ChartJS/Chart.min.js"></script>
-        <script type="text/javascript" src="./Core/AngularChartJS/angular-chart.js"></script>
         <script type="text/javascript" src="./Application/app.js"></script>
-        <script type="text/javascript" src="./Application/config.js"></script>
-        <script type="text/javascript" src="./Application/routes.js"></script>
-        <script type="text/javascript" src="./Application/services.js"></script>
-        <script type="text/javascript" src="./Application/Common/Components/BaseController.js"></script>
-        <script type="text/javascript" src="./Application/Common/Directives/directives.js"></script>
-        <script type="text/javascript" src="./Application/Common/Filters/filters.js"></script>
-        <script type="text/javascript" src="./Application/Common/Helpers/helpers.js"></script>
-        <script type="text/javascript" src="./Application/Common/Services/EventDispatcher.js"></script>
-        <script type="text/javascript" src="./Application/Common/Services/httpRequestTracker.js"></script>
-        <script type="text/javascript" src="./Application/Common/Utility/DOMHelper.js"></script>
-        <script type="text/javascript" src="./Application/Common/Utility/Util.js"></script>
-         <script type="text/javascript" src="./Application/Modules/Home/HomeController.js"></script>
+         <script type="text/javascript" src="./Application/Home/HomeController.js"></script>
 
 
     </body>
