--- a/Server/app/templates/index.html
+++ b/Server/app/templates/index.html
@@ -17,9 +17,9 @@
 
         </div>
         
-        <div>
+        <div ng-controller="HomeController">
 
-            <div data-ng-view="" id="page-content" autoscroll> </div>
+            <div id="page-content" autoscroll> </div>
 
         </div>
 
