--- a/Server/app/templates/index.html
+++ b/Server/app/templates/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Holiday Planner</title>
+<head>
+    <meta charset="utf-8" />
+    <title>Holiday Planner</title>
 
-        <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="./Content/Core/FontAwesome/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="./Content/Core/JQuery-UI/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="./Content/Core/AngularChart/angular-chart.css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    </head>
-    <body ng-app="app" id="app" style="overflow-x: hidden">
+    <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="./Content/Core/FontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./Content/Core/JQuery-UI/jquery-ui.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body style="overflow-x: hidden" ng-app="app">
 
-        <div class="header">
+    <div ng-view>
+</div>
 
-        </div>
-        
-        <div ng-controller="HomeController">
-
-            <div id="page-content" autoscroll> </div>
-
-        </div>
-
-        <script type="text/javascript" src="./Core/JQuery/jquery-1.11.3.min.js"></script>
-        <script type="text/javascript" src="./Core/JQuery/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="./Core/JQuery-UI/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular-route.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular-resource.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular-sanitize.min.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular-cookies.min.js"></script>
-        <script type="text/javascript" src="./Core/AngularJS/angular-animate.min.js"></script>
-        <script type="text/javascript" src="./Core/Bootstrap/bootstrap.min.js"></script>
-        <script type="text/javascript" src="./Core/Bootstrap/ui-bootstrap-tpls-0.13.0.min.js"></script>
-        <script type="text/javascript" src="./Core/Moment/moment.min.js"></script>
-        <script type="text/javascript" src="./Core/Underscore/underscore-min.js"></script>
-        <script type="text/javascript" src="./Application/app.js"></script>
-         <script type="text/javascript" src="./Application/Home/HomeController.js"></script>
+<script type="text/javascript" src="./Core/JQuery/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="./Core/JQuery-UI/jquery-ui.min.js"></script>
+<script type="text/javascript" src="./Core/Bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-route.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-resource.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-sanitize.min.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-cookies.min.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-animate.min.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-simple-logger.js"></script>
+<script type="text/javascript" src="./Core/Lodash/lodash.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-google-maps.js"></script>
+<script type="text/javascript" src="./Core/Bootstrap/ui-bootstrap-tpls-0.13.0.min.js"></script>
+<script type="text/javascript" src="./Core/Moment/moment.min.js"></script>
+<script type="text/javascript" src="./Core/Underscore/underscore-min.js"></script>
+<script type="text/javascript" src="./Application/app.js"></script>
+<script type="text/javascript" src="./Application/Home/HomeController.js"></script>
 
 
-    </body>
+</body>
 </html>
 
