--- a/Server/app/static/css/style.css
+++ b/Server/app/static/css/style.css
@@ -87,8 +87,10 @@ a{
     background: none;
     margin: 0;
     padding: 0 0 50px 0;
-    margin-top: 60px;
+    margin-top: 20px;
     margin-bottom: 10px;
+    height: 350px;
+    overflow-y: auto;
 }
 .chat li {
     padding: 0.5rem;
@@ -190,7 +192,7 @@ a{
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
 }
 .msg p {
-    font-size: 0.8rem;
+    font-size: 14px;
     margin: 0 0 0.2rem 0;
     color: #777;
 }
@@ -219,7 +221,7 @@ a{
 }
 
 .msg time {
-    font-size: 0.7rem;
+    font-size: 10px;
     color: #ccc;
     margin-top: 3px;
     float: right;
@@ -333,4 +335,4 @@ input.textarea {
     opacity: 0.9;
 }
 
-.angular-google-map-container { height: 300px; }
+.angular-google-map-container { height: 250px; }
