request to server

--- a/Server/app/templates/index.html
+++ b/Server/app/templates/index.html
@@ -21,9 +21,10 @@
 <script type="text/javascript" src="./Core/AngularJS/angular.js"></script>
 <script type="text/javascript" src="./Core/AngularJS/angular-route.js"></script>
 <script type="text/javascript" src="./Core/AngularJS/angular-resource.js"></script>
-<script type="text/javascript" src="./Core/AngularJS/angular-sanitize.min.js"></script>
-<script type="text/javascript" src="./Core/AngularJS/angular-cookies.min.js"></script>
-<script type="text/javascript" src="./Core/AngularJS/angular-animate.min.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-sanitize.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-cookies.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-animate.js"></script>
+<script type="text/javascript" src="./Core/AngularJS/angular-touch.js"></script>
 <script type="text/javascript" src="./Core/AngularJS/angular-simple-logger.js"></script>
 <script type="text/javascript" src="./Core/Lodash/lodash.js"></script>
 <script type="text/javascript" src="./Core/AngularJS/angular-google-maps.js"></script>
@@ -31,6 +32,8 @@
 <script type="text/javascript" src="./Core/Moment/moment.min.js"></script>
 <script type="text/javascript" src="./Core/Underscore/underscore-min.js"></script>
 <script type="text/javascript" src="./Application/app.js"></script>
+<script type="text/javascript" src="./Application/services.js"></script>
+<script type="text/javascript" src="./Application/directives.js"></script>
 <script type="text/javascript" src="./Application/Home/HomeController.js"></script>
 
 
