--- a/Server/app/static/css/style.css
+++ b/Server/app/static/css/style.css
@@ -325,7 +325,7 @@ input.textarea {
     left: 7px;
     width: 34px;
     height: 34px;
-    background-image: url(http://i.imgur.com/5WUpcPZ.png);
+    background-image: url(images/ic_compose.png);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 100;
