--- a/Server/app/templates/index.html
+++ b/Server/app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Holiday Planner</title>
+    <title>Holiday Advisor</title>
 
     <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./Content/Core/Bootstrap/css/bootstrap-theme.min.css">
